--- a/contact-1.html
+++ b/contact-1.html
@@ -31,7 +31,7 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" i
         class="fas fa-envelope"></i>
     <link rel="stylesheet" href="assets/css/magnific-popup.min.css">
@@ -451,5 +451,6 @@
         AOS.init();
     </script>
 </body>
+
 
 </html>
