--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </li>
                     <li class="nav-item"><a href="portfolio.html" class="nav-link">Portfolio</a></li>
                     <li class="nav-item"><a href="team.html" class="nav-link">Team</a></li>
-                    <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="contact-1.html" class="nav-link">Contact</a></li>
                 </ul>
                 <button class="cta-button">Get Started</button>
                 <div class="hamburger" id="hamburger">
@@ -671,3 +671,4 @@
 
 
 </html>
+
